// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination "Both" renders correctly 1`] = `
.c0 {
  border-radius: 50%;
  position: fixed;
  top: calc(50% - 20px);
  left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--colorForegroundFeather);
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
}

a:hover .c1,
a:focus .c1 {
  background-color: var(--colorForegroundSoft);
}

.c2 {
  fill: var(--colorForeground);
}

<a
  aria-label="Previous"
  class="c0"
  href="/previous/"
  title="Previous"
  variant="left"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="c2"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M10.828 12l4.95 4.95-1.414 1.414L8 12l6.364-6.364 1.414 1.414z"
      />
    </svg>
  </div>
</a>
`;

exports[`Pagination "Left" renders correctly 1`] = `
.c0 {
  border-radius: 50%;
  position: fixed;
  top: calc(50% - 20px);
  left: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--colorForegroundFeather);
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
}

a:hover .c1,
a:focus .c1 {
  background-color: var(--colorForegroundSoft);
}

.c2 {
  fill: var(--colorForeground);
}

<a
  aria-label="Previous"
  class="c0"
  href="/previous/"
  title="Previous"
  variant="left"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="c2"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M10.828 12l4.95 4.95-1.414 1.414L8 12l6.364-6.364 1.414 1.414z"
      />
    </svg>
  </div>
</a>
`;

exports[`Pagination "Right" renders correctly 1`] = `
.c0 {
  border-radius: 50%;
  position: fixed;
  top: calc(50% - 20px);
  right: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--colorForegroundFeather);
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
}

a:hover .c1,
a:focus .c1 {
  background-color: var(--colorForegroundSoft);
}

.c2 {
  fill: var(--colorForeground);
}

<a
  aria-label="Next"
  class="c0"
  href="/next/"
  title="Next"
  variant="right"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="c2"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
      />
    </svg>
  </div>
</a>
`;

exports[`Pagination renders correctly 1`] = `
.c0 {
  border-radius: 50%;
  position: fixed;
  top: calc(50% - 20px);
  right: 1rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--colorForegroundFeather);
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
}

a:hover .c1,
a:focus .c1 {
  background-color: var(--colorForegroundSoft);
}

.c2 {
  fill: var(--colorForeground);
}

<a
  aria-label=""
  class="c0"
  href="/"
  title=""
  variant="right"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="c2"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
      />
    </svg>
  </div>
</a>
`;
